<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SingUp" >

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/EMAIL_SINGUP"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:maxLength="20" />

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/FIRSTNAME_SINGUP"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtFName"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:maxLength="20" />

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/LASTNAME_SINGUP"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtLName"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:maxLength="20" />

    <TextView
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/PASS_SINGUP"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLength="20" />

    <TextView
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:text="@string/RPTPASS_SINGUP"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtRptPassword"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLength="20" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dip"
        android:layout_height="40dip"
        android:gravity="center"
        android:enabled="true"
        android:text="@string/BUTTON_SINGUP"
        android:textColor="#FFFFFF" />

</LinearLayout>