<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#272727"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    	<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    tools:context=".ActLogin"
		    android:gravity="center"
		    android:orientation="vertical">    
		    
		 	<TextView
				android:layout_width="160dip"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:textColor="#7DC24F"
                android:textSize="16sp"
		        android:text="@string/Login_User"
                />
		        
		     <EditText
				android:id="@+id/editEmailLogin"
		        android:layout_width="220dip"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:textColor="#7DC24F"
                android:textSize="16sp"
                android:textStyle="bold"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:maxLength="100"
		        android:inputType="textEmailAddress"
		        android:layout_marginLeft="30dip"/>
		     <TextView
				android:layout_width="160dip"
		        android:layout_height="wrap_content"
		        android:text="@string/Login_Password"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:textColor="#7DC24F"
                android:textSize="16sp"
                android:textStyle="bold"/>
		     <EditText
				android:id="@+id/edittPasswordLogin"
		        android:layout_width="220dip"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:inputType="textPassword"
		        android:layout_marginLeft="30dip"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:textColor="#7DC24F"
                android:textSize="16sp"
                android:textStyle="bold"/>
		
			<Button
                android:textColor="#7DC24F"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#ff33677f"
		    	android:id="@+id/btnAccess"
		        android:layout_width="200dip"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/Login_Access"
		        android:layout_marginTop="10dip"/>
		   	
			<Button
                android:textColor="#7DC24F"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="#ff33677f"
		    	android:id="@+id/btnNewUser"
		        android:layout_width="300dip"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/Login_New_User"
		        android:layout_marginTop="50dip"/>
			
            
	</LinearLayout>

</RelativeLayout>
